2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c: Fix rgb percent handling for 
	http://www.w3.org/Graphics/SVG/Test/20030813/htmlframe/full-color-prop-02-f.html
	
2004-03-20  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Downgrade libtool requirement to 1.4.2
	* rsvg.c: 137765
	
2004-03-18  Christian Schaller <Uraeus@gnome.org>

	* autogen.sh: Remove need for gnome-common
	  mozilla-plugin: Remove + symbol in Makefile that made autogen barf
	  Fix up spec file for latest changes and fix some old sins

2004-03-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: fixes to masks.
	* rsvg-filter.c: fixes to feComposite
	* rsvg.c: percentage based SVG dimentions work
	
2004-03-18  Dom Lachowicz <cinamod@hotmail.com>

	* *: Memory leak fixes
	
2004-03-17  Dom Lachowicz <cinamod@hotmail.com>

	* *: re-merge rsvg-filters branch back into HEAD
	
2004-03-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-styles.c: Implemented masks.
	
2004-03-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-bpath-util.c: Applied double move fix contributed by ross 
	alexander.

2004-03-14  Dom Lachowicz <cinamod@.hotmail.com>

	* test-performance.c: Make this a useful performance tester
	
2004-03-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Allow for base64 embedded image data
	
2004-03-11  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Ability to scale SVGs that don't provide a width or height
	
2004-03-11  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Improve image scaling, translation. Rotation is still
	horked, though. Agree with Caleb's comments below.
	
2004-03-11  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-styles.c: added state domination, ability for a
	use's values to overwrite even explicitly set state variables in the
	symbol.
	* rsvg-shapes.c: Fixed image bitmap sizing, may need to give the whole 
	system a good rewrite sometime to avoid having to use crappy libart 