@@ -95,7 +95,7 @@ struct _RsvgRadialGradient {
 
 /* Create a new paint server based on a specification string. */
 RsvgPaintServer *
-rsvg_paint_server_parse (const RsvgDefs *defs, const char *str);
+rsvg_paint_server_parse (RsvgPaintServer * current, const RsvgDefs *defs, const char *str);
 
 void
 rsvg_render_paint_server (ArtRender *ar, RsvgPaintServer *ps,
